--- a/portfólio.html
+++ b/portfólio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio</title>
-    <link rel="stylesheet" href="portifolio.css">
+    <link rel="stylesheet" href="css/portifolio.css">
 </head>
 <body>
 
@@ -51,7 +51,7 @@
     </section>
 
     
-    <script src="portifolio.js"></script>
+    <script src="js/portifolio.js"></script>
 
 </body>
 </html>
