--- a/portfólio.html
+++ b/portfólio.html
@@ -51,7 +51,7 @@
     </section>
 
     
-    <script src="js/portifolio.js"></script>
+    <script src="js/portfólio.js"></script>
 
 </body>
 </html>
