--- a/formularioindex.html
+++ b/formularioindex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Contato</title>
-    <link rel="stylesheet" href="formulario.css">
+    <link rel="stylesheet" href="css/formulario.css">
 </head>
 <body>
     <h2>Envie sua mensagem</h2>
@@ -28,6 +28,6 @@
     <div id="resultado" style="margin-top: 20px; padding: 20px; border: 1px solid #ccc; background-color: #f9f9f9;"></div>
 
     <!-- Link para o script JavaScript -->
-    <script src="formulario.js"></script>
+    <script src="js/formulario.js"></script>
 </body>
 </html>
