--- a/jogo.html
+++ b/jogo.html
@@ -21,7 +21,7 @@
         <button class="reset-button" id="resetButton" onclick="resetGame()" style="display: none;">Reiniciar Jogo</button>
     </div>
 
-    
+     <script src="js/jogo.js"></script>
 
 </body>
 </html>
